添加播放音频方法（未完成）